samples/_failures_safe/1761613971_acf9db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce8838c4.c: In function ‘main’:
./samples/SAFE/__tmp_ce8838c4.c:158:17: error: expected expression at end of input
  158 |                 } else
      |                 ^
./samples/SAFE/__tmp_ce8838c4.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce8838c4.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce8838c4.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce8838c4.c:158:17: error: expected declaration or statement at end of input
